--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "author": "smartsitecapital",
   "license": "Apache 2.0",
-  "homepage": "https://smartsitecapital.ml/",
+  "homepage": "https://smartsitecapital.ml/staking",
   "dependencies": {
     "@babel/core": "7.8.4",
     "@svgr/webpack": "4.3.3",
